[package]
name = "vr-p8"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
sysinfo = "0.26.1"
proc-maps = "0.3.0"
process-memory = "0.5.0"
plist = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
memchr = "2.4.1"
uuid = "1.1.2"
thiserror = "1.0.30"
anyhow = "1.0.44"
timer = "0.2.0"
chrono = "0.4.19"
ctrlc = "3.2.1"
bitflags = "1.3.2"
openxr = "0.19.0"
subprocess = "0.2.9"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.4"

[[bin]]
name = "openxr-client"
path = "src/openxr/main.rs"

[[bin]]
name = "memory-process"
path = "src/memory/main.rs"
